--- a/package.json
+++ b/package.json
@@ -5,6 +5,10 @@
   "license": "MIT",
   "dependencies": {
     "@babel/cli": "^7.6.4",
+    "@babel/core": "^7.6.4",
     "@babel/preset-env": "^7.6.3"
+  },
+  "scripts": {
+    "dev": "babel ./main.js -o ./bundle.js -w"
   }
 }
